# StainQuant

./: README.md  requirements.txt  setup.cfg
configs/: default.yaml
data/: loader.py  transforms.py
losses/: __init__.py  activation_entropy.py  balance.py  colour_consistency.py  mask_loss.py  orthogonality.py  permutation_adv.py  reconstruction.py  sparsity.py  spikiness.py  topk_overlap.py  total_correlation.py
models/: __init__.py  adversary.py  encoder.py  full_model.py  stain_basis.py
scripts/: csv2anns.py  gradio_app.py  infer.py  slide_infer.py  train.py
stainquant/: __init__.py
stainquant/cli/: csv2anns.py  gradio_app.py  infer.py  slide_infer.py  train.py
stainquant/configs/: default.yaml
stainquant/data/: loader.py  transforms.py
stainquant/losses/: __init__.py  activation_entropy.py  balance.py  colour_consistency.py  mask_loss.py  orthogonality.py  permutation_adv.py  reconstruction.py  sparsity.py  spikiness.py  topk_overlap.py  total_correlation.py
stainquant/models/: colour_mask.py  decoder.py  stain_basis.py
stainquant/training/: scheduler.py  trainer.py  utils.py
training/: scheduler.py  trainer.py  utils.py
