[metadata]
name = stainquant
version = 0.1.0
description = Stain separation models, training and CLI

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
include = stainquant*

[options.package_data]
stainquant = configs/*.yaml

[options.entry_points]
console_scripts =
    stainquant-train = stainquant.cli.train:main
    stainquant-infer = stainquant.cli.infer:main
    stainquant-slide-infer = stainquant.cli.slide_infer:main
    stainquant-gradio = stainquant.cli.gradio_app:main
    stainquant-csv2anns = stainquant.cli.csv2anns:main
